--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,14 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+
+#vs files
+*.suo
+*.user*
+
+Debug/
+Release/
+
 # =========================
 # Operating System Files
 # =========================
