--- a/Game.vcxproj.filters
+++ b/Game.vcxproj.filters
@@ -95,6 +95,7 @@
     <ClInclude Include="include\SDL2\SDL_video.h" />
     <ClInclude Include="Display.h" />
     <ClInclude Include="ShaderProgram.h" />
+    <ClInclude Include="Model.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="lib\glew32.lib" />
@@ -110,5 +111,6 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Display.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
+    <ClCompile Include="Model.cpp" />
   </ItemGroup>
 </Project>
