--- a/Game.vcxproj.filters
+++ b/Game.vcxproj.filters
@@ -96,6 +96,7 @@
     <ClInclude Include="Display.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="math_utils.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="lib\glew32.lib" />
@@ -112,5 +113,6 @@
     <ClCompile Include="Display.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="math_utils.cpp" />
   </ItemGroup>
 </Project>
