--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,15 +7,15 @@
       "command": "g++",
       "args": [
         "-DGLEW_STATIC",
-        "main.cpp",
-        //"test.cpp",
+        "test.cpp",
         "glew.c",
-        "BallShader.cpp",
-        "math_utils.cpp",
-        "Model.cpp",
-        "ShaderProgram.cpp",
-        "Display.cpp",
-        "-mfpmath=sse", //
+        //"main.cpp",
+        //"BallShader.cpp",
+        //"math_utils.cpp",
+        //"Model.cpp",
+        //"ShaderProgram.cpp",
+        //"Display.cpp",
+        "-mfpmath=sse", 
         "-mmmx",
         "-msse",
         "-msse2",
