--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,10 +11,10 @@
         "glew.c",
         //"main.cpp",
         //"BallShader.cpp",
-        //"math_utils.cpp",
+        "math_utils.cpp",
         //"Model.cpp",
         //"ShaderProgram.cpp",
-        //"Display.cpp",
+        "Display.cpp",
         "-mfpmath=sse", 
         "-mmmx",
         "-msse",
