Converging towards new shaders

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,13 +7,12 @@
       "command": "g++",
       "args": [
         "-DGLEW_STATIC",
-        "test.cpp",
         "glew.c",
-        //"main.cpp",
+        "main.cpp",
         //"BallShader.cpp",
         "math_utils.cpp",
         //"Model.cpp",
-        //"ShaderProgram.cpp",
+        "ShaderProgram.cpp",
         "Display.cpp",
         "-mfpmath=sse", 
         "-mmmx",
