fixed matrix-vector product(might need transpose?)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,7 @@
         "-mmmx",
         "-msse",
         "-msse2",
+        "-msse3",
         "-o./build/game.exe",
         "-I./include",
         "-L./lib",
