started Model2D class

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
         "math_utils.cpp",
         "ShaderProgram.cpp",
         "Display.cpp",
-        "-mfpmath=sse", 
+        "model2D.cpp",
         "-O3",
         "-o./build/game.exe",
         "-I./include",
