rearrange the folder structure

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,12 +7,12 @@
       "command": "g++",
       "args": [
         "-DGLEW_STATIC",
-        "glew.c",
-        "main.cpp",
-        "math_utils.cpp",
-        "ShaderProgram.cpp",
-        "Display.cpp",
-        "model2D.cpp",
+        "./src/glew.c",
+        "./src/main.cpp",
+        "./src/math_utils.cpp",
+        "./src/ShaderProgram.cpp",
+        "./src/Display.cpp",
+        "./src/model2D.cpp",
         "-O3",
         "-o./build/game.exe",
         "-I./include",
