math_utils refactoring (wip3) build ok!

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,9 @@
         "./src/glew.c",
         "./src/main.cpp",
         "./src/math_utils.cpp",
+        "./src/Vector4.cpp",
+        "./src/Vector3.cpp",
+        "./src/Vector2.cpp",
         "./src/ShaderProgram.cpp",
         "./src/Display.cpp",
         "./src/model2D.cpp",
